--- a/Hotel/src/main/resources/templates/hoteles/editar-hotel.html
+++ b/Hotel/src/main/resources/templates/hoteles/editar-hotel.html
@@ -3,7 +3,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Editar Huésped</title>
+        <title>Editar Hotel</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     </head>
@@ -26,10 +26,10 @@
             </div>
 
             <div class="flex-grow-1 p-4">
-                <h2>Editar Huésped</h2></br>
+                <h2>Editar Hotel</h2></br>
 
-                <form th:action="@{/huespedes/editar}" th:object="${huesped}" method="post" class="row g-3" style="width: 800px;">
-                    <input type="hidden" th:field="*{idHuesped}" />
+                <form th:action="@{/hoteles/actualizar}" th:object="${hotel}" method="post" class="row g-3" style="width: 800px;">
+                    <input type="hidden" th:field="*{idHotel}" />
 
                     <div class="col-md-6">
                         <label class="form-label">Nombre:</label>
@@ -37,43 +37,38 @@
                     </div>
 
                     <div class="col-md-6">
-                        <label class="form-label">Primer Apellido:</label>
-                        <input type="text" th:field="*{apellido1}" class="form-control" required/>
+                        <label class="form-label">Ciudad:</label>
+                        <input type="text" th:field="*{ciudad}" class="form-control" required/>
                     </div>
 
                     <div class="col-md-6">
-                        <label class="form-label">Segundo Apellido:</label>
-                        <input type="text" th:field="*{apellido2}" class="form-control" required/>
+                        <label class="form-label">Cantón:</label>
+                        <input type="text" th:field="*{canton}" class="form-control" required/>
                     </div>
 
                     <div class="col-md-6">
-                        <label class="form-label">Cédula:</label>
-                        <input type="number" th:field="*{cedula}" class="form-control" required/>
+                        <label class="form-label">Distrito:</label>
+                        <input type="text" th:field="*{distrito}" class="form-control" required/>
                     </div>
 
-                    <div class="col-md-6">
-                        <label class="form-label">Correo:</label>
-                        <input type="email" th:field="*{correo}" class="form-control" required/>
+                    <div class="col-md-12">
+                        <label class="form-label">Detalle Dirección:</label>
+                        <input type="text" th:field="*{detalleDireccion}" class="form-control" required/>
                     </div>
 
                     <div class="col-md-6">
                         <label class="form-label">Teléfono:</label>
-                        <input type="number" th:field="*{telefono}" class="form-control" required/>
+                        <input type="text" th:field="*{telefono}" class="form-control" required/>
                     </div>
 
                     <div class="col-md-6">
-                        <label class="form-label">Fecha de Nacimiento:</label>
-                        <input type="date" th:field="*{fechaNacimiento}" class="form-control" required/>
-                    </div>
-
-                    <div class="col-md-6">
-                        <label class="form-label">Fecha de Registro:</label>
-                        <input type="date" th:field="*{fechaRegistro}" class="form-control" required/>
+                        <label class="form-label">Número de Pisos:</label>
+                        <input type="number" th:field="*{numeroPisos}" class="form-control" required/>
                     </div>
 
                     <div class="col-12">
                         <button type="submit" class="btn btn-primary">Guardar</button>
-                        <a href="/huespedes" class="btn btn-secondary">Volver</a>
+                        <a href="/hoteles/listar" class="btn btn-secondary">Volver</a>
                     </div>
 
                     <div th:if="${error}" class="col-12">
