--- a/Hotel/src/main/resources/templates/hoteles/listar-hoteles.html
+++ b/Hotel/src/main/resources/templates/hoteles/listar-hoteles.html
@@ -3,7 +3,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Huéspedes</title>
+        <title>Hoteles</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     </head>
@@ -26,40 +26,38 @@
             </div>
 
             <div class="flex-grow-1 p-4">
-                <h1>Huespedes</h1></br>
+                <h1>Hoteles</h1><br/>
 
-                <a href="/huespedes/crear" class="btn btn-primary mb-3">Agregar huesped</a>
-
+                <a href="/hoteles/nuevo" class="btn btn-primary mb-3">Agregar Hotel</a>
+                
                 <!-- Aca es donde estan los datos -->
                 <table class="table table-striped table-hover">
                     <thead class="table-dark">
                         <tr>
                             <th>ID</th>
                             <th>Nombre</th>
-                            <th>Apellido 1</th>
-                            <th>Apellido 2</th>
-                            <th>Cédula</th>
-                            <th>Correo</th>
+                            <th>Ciudad</th>
+                            <th>Cantón</th>
+                            <th>Distrito</th>
+                            <th>Dirección</th>
                             <th>Teléfono</th>
-                            <th>Fecha Nacimiento</th>
-                            <th>Fecha Registro</th>
-                            <th>Acción</th>
+                            <th>Número de Pisos</th>
+                            <th>Acciones</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr th:each="huesped : ${huespedes}">
-                            <td th:text="${huesped.idHuesped}"></td>
-                            <td th:text="${huesped.nombre}"></td>
-                            <td th:text="${huesped.apellido1}"></td>
-                            <td th:text="${huesped.apellido2}"></td>
-                            <td th:text="${huesped.cedula}"></td>
-                            <td th:text="${huesped.correo}"></td>
-                            <td th:text="${huesped.telefono}"></td>
-                            <td th:text="${#dates.format(huesped.fechaNacimiento, 'dd/MM/yyyy')}"></td>
-                            <td th:text="${#dates.format(huesped.fechaRegistro, 'dd/MM/yyyy')}"></td>
+                        <tr th:each="hotel : ${hoteles}">
+                            <td th:text="${hotel.idHotel}"></td>
+                            <td th:text="${hotel.nombre}"></td>
+                            <td th:text="${hotel.ciudad}"></td>
+                            <td th:text="${hotel.canton}"></td>
+                            <td th:text="${hotel.distrito}"></td>
+                            <td th:text="${hotel.detalleDireccion}"></td>
+                            <td th:text="${hotel.telefono}"></td>
+                            <td th:text="${hotel.numeroPisos}"></td>
                             <td>
-                                <a th:href="@{/huespedes/editar/{id}(id=${huesped.idHuesped})}" class="btn btn-primary btn-sm">Editar</a>
-                                <a th:href="@{/huespedes/eliminar/{id}(id=${huesped.idHuesped})}" class="btn btn-danger btn-sm" onclick="return confirm('¿Está seguro de eliminar este huésped?');">Eliminar</a>
+                                <a th:href="@{/hoteles/editar/{id}(id=${hotel.idHotel})}" class="btn btn-primary btn-sm">Editar</a>
+                                <a th:href="@{/hoteles/eliminar/{id}(id=${hotel.idHotel})}" class="btn btn-danger btn-sm" onclick="return confirm('¿Está seguro de eliminar este hotel?');">Eliminar</a>
                             </td>
                         </tr>
                     </tbody>
