--- a/Hotel/src/main/resources/templates/index.html
+++ b/Hotel/src/main/resources/templates/index.html
@@ -1,15 +1,54 @@
+
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
-<html>
+<html lang="es">
     <head>
-        <title>TODO supply a title</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Index</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
     </head>
+    
     <body>
-        <div>TODO write content</div>
+        
+       <!-- Parte de arriba--> 
+       <nav class="navbar navbar-expand-lg" style="background-color: #003366;">
+            <div class="container-fluid">
+                <a class="navbar-brand text-white" href="/">Cadena hotelera 5Gs</a>
+            </div>
+        </nav>
+        
+        <!-- Menu izquierdo-->
+        <div class="d-flex">
+            <div class="sidebar bg-light p-3" style="width: 220px;">
+                <a class="d-block mb-2 text-decoration-none text-dark" href="/huespedes">Huesped</a>
+                <a class="d-block mb-2 text-decoration-none text-dark" href="/empleados">Empleado</a>
+                <a class="d-block mb-2 text-decoration-none text-dark" href="/reservaciones">Reservacion</a>
+                <a class="d-block mb-2 text-decoration-none text-dark" href="/hoteles/listar">Hotel</a>
+            </div>
+
+            <div class="main-content">
+                <h1>Bienvenido</h1></br>
+                <p>Puedes hacer click en las opciones de la izquierda para ver la informacion que necesites.</p></br>
+                </br><h2>Acciones que podras realizar</h2></br>
+
+                <p><strong>Huesped</strong>: Con esta opcion podras ver todos los huespedes de nuestra cadena de hoteles,</br>
+                    ademas de ser necesario podras agregar un nuevo cliente de ser necesario, 
+                    editar o elimar</br> uno que ya este dependiendo de tus necesidades.</p></br>
+
+                <p><strong>Empleados</strong>: Con esta opcion podras visualizar todos los empleados de nuestra cadena hotelera,</br>
+                    ademas de registrar nuevos colaboradores, editar o eliminar su informacion dependiendo de tus </br>necesidades.</p></br>
+
+                <p><strong>Reservaciones</strong>: Con esta opcion podras ver todas las reservaciones de los clientes en diferentes </br>hoteles,
+                    ademas de poder agregar nuevas reservaciones, editar o elimar una reserva que ya este </br>dependiendo de tus necesidades.</p></br>
+
+                <p><strong>Hotel</strong>: Con esta opcion podras ver todos los hoteles de nuestra cadena hotelera, ademas cuando </br> se contruyan nuevos hoteles 
+                    podras agregar el nuevo hotel, editar o eliminar segun la necesidad </br>de la empresa.</p></br>
+
+            </div>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
     </body>
 </html>
