--- a/Hotel/src/main/resources/templates/huesped/editarHuesped.html
+++ b/Hotel/src/main/resources/templates/huesped/editarHuesped.html
@@ -1,88 +1,85 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <title>Editar Huésped</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <title>Editar Huésped</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
 
-        <!-- Parte de arriba--> 
-        <nav class="navbar navbar-expand-lg" style="background-color: #003366;">
-            <div class="container-fluid">
-                <a class="navbar-brand text-white" href="/">Cadena hotelera 5Gs</a>
+<nav class="navbar navbar-expand-lg" style="background-color: #003366;">
+    <div class="container-fluid">
+        <a class="navbar-brand text-white" href="/">Cadena hotelera 5Gs</a>
+    </div>
+</nav>
+
+<div class="d-flex">
+    <div class="sidebar bg-light p-3" style="width: 220px;">
+        <a class="d-block mb-2 text-decoration-none text-dark" href="/huespedes">Huésped</a>
+        <a class="d-block mb-2 text-decoration-none text-dark" href="/empleados">Empleado</a>
+        <a class="d-block mb-2 text-decoration-none text-dark" href="/reservaciones">Reservación</a>
+        <a class="d-block mb-2 text-decoration-none text-dark" href="/hoteles/listar">Hotel</a>
+    </div>
+
+    <div class="flex-grow-1 p-4">
+        <h2>Editar Huésped</h2><br/>
+
+        <form th:action="@{/huespedes/editar}" th:object="${huesped}" method="post" class="row g-3" style="width: 800px;">
+            <input type="hidden" th:field="*{idHuesped}" />
+
+            <div class="col-md-6">
+                <label class="form-label">Nombre:</label>
+                <input type="text" th:field="*{nombre}" class="form-control" required/>
             </div>
-        </nav>
 
-        <!-- Menu izquierdo-->
-        <div class="d-flex">
-            <div class="sidebar bg-light p-3" style="width: 220px;">
-                <a class="d-block mb-2 text-decoration-none text-dark" href="/huespedes">Huesped</a>
-                <a class="d-block mb-2 text-decoration-none text-dark" href="/empleados">Empleado</a>
-                <a class="d-block mb-2 text-decoration-none text-dark" href="/reservaciones">Reservacion</a>
-                <a class="d-block mb-2 text-decoration-none text-dark" href="/hoteles/listar">Hotel</a>
+            <div class="col-md-6">
+                <label class="form-label">Primer Apellido:</label>
+                <input type="text" th:field="*{apellido1}" class="form-control" required/>
             </div>
 
-            <div class="flex-grow-1 p-4">
-                <h2>Editar Huésped</h2></br>
-
-                <form th:action="@{/huespedes/editar}" th:object="${huesped}" method="post" class="row g-3" style="width: 800px;">
-                    <input type="hidden" th:field="*{idHuesped}" />
-
-                    <div class="col-md-6">
-                        <label class="form-label">Nombre:</label>
-                        <input type="text" th:field="*{nombre}" class="form-control" required/>
-                    </div>
-
-                    <div class="col-md-6">
-                        <label class="form-label">Primer Apellido:</label>
-                        <input type="text" th:field="*{apellido1}" class="form-control" required/>
-                    </div>
-
-                    <div class="col-md-6">
-                        <label class="form-label">Segundo Apellido:</label>
-                        <input type="text" th:field="*{apellido2}" class="form-control" required/>
-                    </div>
-
-                    <div class="col-md-6">
-                        <label class="form-label">Cédula:</label>
-                        <input type="number" th:field="*{cedula}" class="form-control" required/>
-                    </div>
-
-                    <div class="col-md-6">
-                        <label class="form-label">Correo:</label>
-                        <input type="email" th:field="*{correo}" class="form-control" required/>
-                    </div>
-
-                    <div class="col-md-6">
-                        <label class="form-label">Teléfono:</label>
-                        <input type="number" th:field="*{telefono}" class="form-control" required/>
-                    </div>
-
-                    <div class="col-md-6">
-                        <label class="form-label">Fecha de Nacimiento:</label>
-                        <input type="date" th:field="*{fechaNacimiento}" class="form-control" required/>
-                    </div>
-
-                    <div class="col-md-6">
-                        <label class="form-label">Fecha de Registro:</label>
-                        <input type="date" th:field="*{fechaRegistro}" class="form-control" required/>
-                    </div>
-
-                    <div class="col-12">
-                        <button type="submit" class="btn btn-primary">Guardar</button>
-                        <a href="/huespedes" class="btn btn-secondary">Volver</a>
-                    </div>
-
-                    <div th:if="${error}" class="col-12">
-                        <p class="text-danger" th:text="${error}"></p>
-                    </div>
-                </form>
+            <div class="col-md-6">
+                <label class="form-label">Segundo Apellido:</label>
+                <input type="text" th:field="*{apellido2}" class="form-control" required/>
             </div>
-        </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    </body>
+            <div class="col-md-6">
+                <label class="form-label">Cédula:</label>
+                <input type="number" th:field="*{cedula}" class="form-control" required/>
+            </div>
+
+            <div class="col-md-6">
+                <label class="form-label">Correo:</label>
+                <input type="email" th:field="*{correo}" class="form-control" required/>
+            </div>
+
+            <div class="col-md-6">
+                <label class="form-label">Teléfono:</label>
+                <input type="number" th:field="*{telefono}" class="form-control" required/>
+            </div>
+
+            <div class="col-md-6">
+                <label class="form-label">Fecha de Nacimiento:</label>
+                <input type="date" th:field="*{fechaNacimiento}" class="form-control" required/>
+            </div>
+
+            <div class="col-md-6">
+                <label class="form-label">Fecha de Registro:</label>
+                <input type="date" th:field="*{fechaRegistro}" class="form-control" required/>
+            </div>
+
+            <div class="col-12">
+                <button type="submit" class="btn btn-primary">Guardar</button>
+                <a href="/huespedes" class="btn btn-secondary">Volver</a>
+            </div>
+
+            <div th:if="${error}" class="col-12">
+                <p class="text-danger" th:text="${error}"></p>
+            </div>
+        </form>
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
