--- a/Hotel/src/main/resources/templates/index.html
+++ b/Hotel/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
             <h5 class="text-dark mb-3"><i class="bi bi-menu-button-fill"></i> Menú</h5>
             <a class="d-block mb-2 text-decoration-none text-dark" href="/huespedes"><i class="bi bi-person-fill"></i> Huéspedes</a>
             <a class="d-block mb-2 text-decoration-none text-dark" href="/empleados"><i class="bi bi-briefcase-fill"></i> Empleados</a>
-            <a class="d-block mb-2 text-decoration-none text-dark" href="/reservacion"><i class="bi bi-calendar-check-fill"></i> Reservaciones</a>
+            <a class="d-block mb-2 text-decoration-none text-dark" href="/reservaciones"><i class="bi bi-calendar-check-fill"></i> Reservaciones</a>
             <a class="d-block mb-2 text-decoration-none text-dark" href="/hoteles/listar"><i class="bi bi-building"></i> Hoteles</a>
         </div>
 
