Incorporacion de factura + otros cambios

--- a/Hotel/src/main/resources/templates/reservacion/crearReservacion.html
+++ b/Hotel/src/main/resources/templates/reservacion/crearReservacion.html
@@ -20,6 +20,7 @@
                 <a class="d-block mb-2 text-decoration-none text-dark" href="/empleados">Empleado</a>
                 <a class="d-block mb-2 text-decoration-none text-dark" href="/reservaciones">Reservación</a>
                 <a class="d-block mb-2 text-decoration-none text-dark" href="/hoteles/listar">Hotel</a>
+                <a class="d-block mb-2 text-decoration-none text-dark" href="/facturas">Factura</a>
             </div>
 
             <div class="flex-grow-1 p-4">
