--- a/Hotel/src/main/resources/templates/empleados/empleados.html
+++ b/Hotel/src/main/resources/templates/empleados/empleados.html
@@ -23,6 +23,7 @@
                 <a class="d-block mb-2 text-decoration-none text-dark" href="/empleados">Empleado</a>
                 <a class="d-block mb-2 text-decoration-none text-dark" href="/reservaciones">Reservacion</a>
                 <a class="d-block mb-2 text-decoration-none text-dark" href="/hoteles/listar">Hotel</a>
+                <a class="d-block mb-2 text-decoration-none text-dark" href="/facturas">Factura</a>
             </div>
 
             <div class="flex-grow-1 p-4">
