--- a/Hotel/src/main/resources/templates/index.html
+++ b/Hotel/src/main/resources/templates/index.html
@@ -25,6 +25,7 @@
             <a class="d-block mb-2 text-decoration-none text-dark" href="/empleados"><i class="bi bi-briefcase-fill"></i> Empleados</a>
             <a class="d-block mb-2 text-decoration-none text-dark" href="/reservaciones"><i class="bi bi-calendar-check-fill"></i> Reservaciones</a>
             <a class="d-block mb-2 text-decoration-none text-dark" href="/hoteles/listar"><i class="bi bi-building"></i> Hoteles</a>
+            <a class="d-block mb-2 text-decoration-none text-dark" href="/facturas">Factura</a>
         </div>
 
         <!-- Contenido principal -->
